# birp_cpp

./: .gitignore  CMakeLists.txt  Doxyfile  Helper.cpp  Helper.h  README.md  build  helper.cpp  index.html  main  main.cpp
Classes/: Camera.cpp  Camera.h  DataCube.cpp  DataCube.h
Data/: S05D35V400B0000-05rad.dat:Zone.Identifier
build_cmake/: CMakeCache.txt  Makefile  birp  cmake_install.cmake
build_cmake/Classes/: Makefile  cmake_install.cmake
data/output/: px_uni_0917.dat.fits
include/: Camera.h  Cmem.h  DataCube.h  Helper.h  Space.h
src/: Camera.cpp  Cmem.cpp  DataCube.cpp  Helper.cpp  Volume.cpp  main.cpp
tests/: CMEM_test.cpp  Camera_test.cpp  DataCube_test.cpp  Space_test.cpp
